--- a/index.html
+++ b/index.html
@@ -7,6 +7,150 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Привіт</h1>
+    <header>
+      <nav>
+        <a href="./index.html">Web<span>Studio</span></a>
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+      </nav>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
+    </header>
+    <main>
+      <section>
+        <div>
+          <h1>Effective Solutions for Your Business</h1>
+          <button type="button">Order Service</button>
+        </div>
+      </section>
+      <section>
+        <div>
+          <p>Strategy</p>
+          <ul>
+            <li>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </li>
+          </ul>
+        </div>
+        <div>
+          <p>Punctuality</p>
+          <ul>
+            <li>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </li>
+          </ul>
+        </div>
+        <div>
+          <p>Diligence</p>
+          <ul>
+            <li>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </li>
+          </ul>
+        </div>
+        <div>
+          <p>Technologies</p>
+          <ul>
+            <li>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section>
+        <h2>What are we doing</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/what_are_we_doing/img1.jpg"
+              alt="img1"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/what_are_we_doing/img2.jpg"
+              alt="img2"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/what_are_we_doing/img3.jpg"
+              alt="img3"
+              width="360"
+              height="300"
+            />
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/our_team/team_card1.jpg"
+              alt="team_card1"
+              width="264"
+              height="260"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/our_team/team_card2.jpg"
+              alt="team_card2"
+              width="264"
+              height="260"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/our_team/team_card3.jpg"
+              alt="team_card3"
+              width="264"
+              height="260"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/our_team/team_card2.jpg"
+              alt="team_card4"
+              width="264"
+              height="260"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <div>
+        <a href="./index.html">Web<span>Studio</span></a>
+        <p>
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
