--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html">Web<span>Studio</span></a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -25,48 +25,41 @@
     </header>
     <main>
       <section>
-        <div>
-          <h1>Effective Solutions for Your Business</h1>
-          <button type="button">Order Service</button>
-        </div>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
       </section>
       <section>
-        <div>
-          <p>Strategy</p>
-          <ul>
-            <li>
+        <ul>
+          <h2 hidden>Advantages</h2>
+          <li>
+            <h3>Strategy</h3>
+            <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
-            </li>
-          </ul>
-        </div>
-        <div>
-          <p>Punctuality</p>
-          <ul>
-            <li>
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
-            </li>
-          </ul>
-        </div>
-        <div>
-          <p>Diligence</p>
-          <ul>
-            <li>
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
-            </li>
-          </ul>
-        </div>
-        <div>
-          <p>Technologies</p>
-          <ul>
-            <li>
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
-            </li>
-          </ul>
-        </div>
+            </p>
+          </li>
+        </ul>
       </section>
       <section>
         <h2>What are we doing</h2>
@@ -145,7 +138,7 @@
     </main>
     <footer>
       <div>
-        <a href="./index.html">Web<span>Studio</span></a>
+        <a href="./index.html">WebStudio</a>
         <p>
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
