--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <button type="button">Order Service</button>
       </section>
       <section>
+        <h2>Advantages</h2>
         <ul>
-          <h2 hidden>Advantages</h2>
           <li>
             <h3>Strategy</h3>
             <p>
@@ -137,13 +137,11 @@
       </section>
     </main>
     <footer>
-      <div>
-        <a href="./index.html">WebStudio</a>
-        <p>
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
+      <a href="./index.html">WebStudio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
